--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
     "vscode": {
       "extensions": [
         "James-Yu.latex-workshop",
-        "GitHub.copilot"
+        "GitHub.copilot",
+        "mhutchie.git-graph"
       ],
       "settings": {
         "[tex]": {
@@ -44,6 +45,8 @@
     "ghcr.io/devcontainers-extra/features/zsh-plugins": {
       "plugins": "zsh-autosuggestions zsh-syntax-highlighting",
       "omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions.git https://github.com/zsh-users/zsh-syntax-highlighting.git"
-    }
-  }
+    },
+    "ghcr.io/devcontainers-extra/features/fzf:1": {}
+  },
+  "onCreateCommand": "echo 'source <(fzf --zsh)' >> ~/.zshrc"
 }
